--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="icon" type="image/x-icon" href="">
     <meta charset="utf-8">
-    <title class="head-title">Dr. Ana Clara Cruz - Ortopedista</title>
+    <title class="head-title">Luana Exum Tarot Solidário</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="" />
