--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
             <script>
                 const listaWhatsApp = [];
                 //formato do número deve ser 5511999998888
-                listaWhatsApp.push("https://api.whatsapp.com/send?phone=5512988574327&text=Quero%20uma%20analise%20gratuita");
-                listaWhatsApp.push("https://api.whatsapp.com/send?phone=5512988574327&text=Quero%20uma%20analise%20gratuita");
+                listaWhatsApp.push("https://api.whatsapp.com/send?phone=5512988574327&text=Quero%20uma%20consulta%20solidária");
+                listaWhatsApp.push("https://api.whatsapp.com/send?phone=5512988574327&text=Quero%20uma%20consulta%20solidária"");
 
                 function getRandomLogoUrl() {
                     return listaWhatsApp[Math.floor(Math.random() * listaWhatsApp.length)]
