--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                         </g>
                                     </svg></span></div>
                             <div class="button-cc active-select content_area" type="button-center" id="button-center-153085" wd="264.406" style="width: 264.406px;">
-                                <h3 class="active-select font-small font-medium-mobile lh2" type="title" id="title-936184" bg-color2="rgba(0, 0, 0, 0)">Chamar no WhatsApp</h3>
+                                <h3 class="active-select font-small font-medium-mobile lh2" type="title" id="title-936184" bg-color2="rgba(0, 0, 0, 0 )" onClick="fbq('track', 'StartTrial');">Chamar no WhatsApp</h3>
                                 <script type="text/javascript">
                                     document.getElementById('button-center-153085').addEventListener('click', function() {
                                         fbq('track', 'StartTrial');
@@ -84,7 +84,7 @@
                                         </g>
                                     </svg></span></div>
                             <div class="button-cc active-select content_area" type="button-center" wd="264.406" style="width: 264.406px;" id="button-center-15953">
-                                <h3 class="active-select font-small font-medium-mobile lh2" type="title" bg-color2="rgba(0, 0, 0, 0)" id="title-550155">Chamar no WhatsApp</h3>
+                                <h3 class="active-select font-small font-medium-mobile lh2" type="title" bg-color2="rgba(0, 0, 0, 0)" id="title-550155"  onClick="fbq('track', 'StartTrial');">Chamar no WhatsApp</h3>
                                 <script type="text/javascript">
                                     document.getElementById('button-center-15953').addEventListener('click', function() {
                                         fbq('track', 'StartTrial');
